--- a/css/style.css
+++ b/css/style.css
@@ -186,3 +186,11 @@ ul.two-column {
   -webkit-columns: 2;
   -moz-columns: 2;
 }
+
+td {
+  font-size: 12px;
+  text-align: center;
+  padding: 2px 2px 2px 2px;
+  margin:2px;
+  height: 2px;
+}
